# Modular-API

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  mkdoc.yml  mkdocs-build.yml
changelog/: index.html
doc/: mkdocs.yml
doc/docs/: changelog.md  concept.md  index.md  reference.md  setting.md
doc/docs/cli/: DB.md  init.md  module.md  modules.md
doc/docs/getting_started/: installation.md
doc/docs/roadmap/: todo.md
doc/docs/stylesheets/: extra.css
docs/: index.md
modularapi/: app.py  asgi.py  cli.py  db.py  settings.py  utils.py  venv_requirements.txt
modularapi/templates/default/: alembic.ini.mako  env.py
search/: search_index.json
setting/: index.html
tests/: test_modularapi.py
