[tool.poetry]
name = "ModularAPI"
version = "0.0.1"
description = "A CLI Framework based on FastAPI using module-based architecture."
authors = ["Deveaux Benoît <contact.flapili@gmail.com>", "Joffre Mathis <mariusjoffre@gmail.com>"]
licence = "MIT"
homepage = "https://modular-lab.github.io/Modular-API/"
repository = "https://github.com/Modular-Lab/Modular-API"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
GitPython = "^3.1.13"
alembic = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ModularAPI = "modularapi.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
